# GDALPytorchTemplate

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: samgeo_main.py
workdir/: pyproject.toml
