[tool.poetry]
name = "gdal-pytorch-template"
version = "0.1.0"
description = ""
authors = ["torumitsutake <torumitsutake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
